--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://metatags.io/" />
+    <meta property="og:url" content="https://droptab.vercel.app/" />
     <meta
       property="og:title"
       content="Drop Tab  – Best bookmark tool for visiting later"
@@ -26,14 +26,11 @@
       property="og:description"
       content="With Drop Tab you can add and saves web pages much more efficiently.  Now, no need to clutter your menu bar with bookmarks. "
     />
-    <meta
-      property="og:image"
-      content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png"
-    />
+    <meta property="og:image" content="/og-image.png" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://metatags.io/" />
+    <meta property="twitter:url" content="https://droptab.vercel.app/" />
     <meta
       property="twitter:title"
       content="Drop Tab  – Best bookmark tool for visiting later"
@@ -42,10 +39,7 @@
       property="twitter:description"
       content="With Drop Tab you can add and saves web pages much more efficiently.  Now, no need to clutter your menu bar with bookmarks. "
     />
-    <meta
-      property="twitter:image"
-      content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png"
-    />
+    <meta property="twitter:image" content="/og-image.png" />
 
     <title>Drop Tab – Best bookmark tool for visiting later</title>
     <link rel="stylesheet" href="style.css" />
