added delete button

--- a/droptab.html
+++ b/droptab.html
@@ -41,6 +41,11 @@
     />
     <meta property="twitter:image" content="/og-image.png" />
 
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+
     <title>Drop Tab – Best bookmark tool for visiting later</title>
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -51,9 +56,9 @@
       </div>
 
       <div class="buttons">
-        <button id="input-btn">Save Input</button>
-        <button id="tab-btn">Save Tab</button>
-        <button id="delete-btn">Delete All</button>
+        <button id="input-btn" class="button">Save Input</button>
+        <button id="tab-btn" class="button">Save Tab</button>
+        <button id="delete-btn" class="button">Delete All</button>
       </div>
 
       <div class="lists">
@@ -62,6 +67,7 @@
             --- Your links will be added here !! Thank you for using my
             extension ---
           </li>
+          <!-- <i class="fa fa-close"  onclick="" id="deletebox"></i> -->
         </ul>
       </div>
 
